# dpdk-easy-install

./: CMakeLists.txt  LICENSE  README.md  app.sh  build.sh
bootstrap/: dpdk.sh  env.sh  hugepages.sh  ofed.sh
open-nic-dpdk/: README.md  dpdk_driver.sh  write_hw_registers.sh
